--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,8 +61,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'com.facebook.android:facebook-share:7.0.1'
 
-    implementation platform('com.google.firebase:firebase-bom:33.16.0')
-    implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.android.material:material'
     implementation 'com.android.support:design:28.0.0'
+
+    implementation 'com.google.firebase:firebase-firestore:24.10.0'
+    implementation 'com.google.firebase:firebase-auth:22.3.0'
+
 }
+
+    apply plugin: 'com.google.gms.google-services'
