--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:24.10.0'
     implementation 'com.google.firebase:firebase-auth:22.3.0'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
 
     apply plugin: 'com.google.gms.google-services'
