--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,27 +47,31 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.gms:play-services-ads:24.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.facebook.android:facebook-login:16.1.3'
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
-
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test:runner:1.5.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-    implementation 'me.biubiubiu.justifytext:library:1.1'
     implementation 'com.google.android.material:material:1.9.0'
-    implementation 'com.facebook.android:facebook-share:7.0.1'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'me.biubiubiu.justifytext:library:1.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
-    implementation 'com.google.android.material:material'
-    implementation 'com.android.support:design:28.0.0'
+    // Google Play Services
+    implementation 'com.google.android.gms:play-services-ads:24.4.0'
+    implementation 'com.google.android.gms:play-services-maps:18.2.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
+    // Firebase
     implementation 'com.google.firebase:firebase-firestore:24.10.0'
     implementation 'com.google.firebase:firebase-auth:22.3.0'
 
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    // Facebook SDK (consistent version)
+    implementation 'com.facebook.android:facebook-login:16.1.3'
+    implementation 'com.facebook.android:facebook-share:16.1.3'
+
+    // Test
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
 }
 
