--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,9 +60,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.2.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
 
-    // Firebase
-    implementation 'com.google.firebase:firebase-firestore:24.10.0'
-    implementation 'com.google.firebase:firebase-auth:22.3.0'
+    // Firebase BoM ব্যবহার করুন
+    implementation platform('com.google.firebase:firebase-bom:33.1.0')
+
+    // এরপর ভার্সন ছাড়া Firebase লাইব্রেরি যোগ করুন
+    implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-database'
 
     // Facebook SDK (consistent version)
     implementation 'com.facebook.android:facebook-login:16.1.3'
@@ -76,3 +81,4 @@ dependencies {
 }
 
     apply plugin: 'com.google.gms.google-services'
+
