--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.11.1'
-        classpath 'com.google.gms:google-services:4.4.1'
-        classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.google.gms:google-services:4.4.3'
 
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -30,5 +29,5 @@ allprojects {
 }
 
 tasks.register('clean', Delete) {
-    delete rootProject.buildDir
+    delete rootProject
 }
