--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 
+    // Full screen Image
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
+
 }
 
     apply plugin: 'com.google.gms.google-services'
