--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         pnpmsjm {
             keyAlias '1'
             keyPassword 'fmfirin'
-            storeFile file('C:\\Users\\RAJCPSC6\\Desktop\\pnpmsjmjks.jks')
+            storeFile file('C:\\Users\\Firoz Mahmud\\Documents\\pnpmsjmjks.jks')
             storePassword 'fmfirin'
         }
     }
@@ -20,9 +20,9 @@ android {
     defaultConfig {
         applicationId 'pnpmsjm.com.ourmasjid'
         minSdkVersion 26
-        targetSdkVersion 34
-        versionCode 4
-        versionName '1.2'
+        targetSdkVersion 35
+        versionCode 1
+        versionName '1.0'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.pnpmsjm
     }
@@ -57,12 +57,12 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     // Google Play Services
-    implementation 'com.google.android.gms:play-services-ads:24.4.0'
+    implementation 'com.google.android.gms:play-services-ads:24.5.0'
     implementation 'com.google.android.gms:play-services-maps:19.2.0'
     implementation 'com.google.android.gms:play-services-location:21.3.0'
 
     // Firebase BoM ব্যবহার করুন
-    implementation platform('com.google.firebase:firebase-bom:33.16.0')
+    implementation platform('com.google.firebase:firebase-bom:34.0.0')
 
     // এরপর ভার্সন ছাড়া Firebase লাইব্রেরি যোগ করুন
     implementation 'com.google.firebase:firebase-firestore'
@@ -77,8 +77,8 @@ dependencies {
 
     // Test
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test:runner:1.6.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    androidTestImplementation 'androidx.test:runner:1.7.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
 
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
