--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,16 @@ plugins {
 
 android {
     namespace 'pnpmsjm.com.ourmasjid'
-    compileSdkVersion 36
+    compileSdk 36
 
 
     signingConfigs {
+        debug {
+            storeFile file('C:\\Users\\Firoz Mahmud\\Documents\\pnpmsjm')
+            storePassword 'fmfirin'
+            keyAlias '1'
+            keyPassword 'fmfirin'
+        }
         pnpmsjm {
             keyAlias '1'
             keyPassword 'fmfirin'
@@ -20,7 +26,7 @@ android {
     defaultConfig {
         applicationId 'pnpmsjm.com.ourmasjid'
         minSdkVersion 26
-        targetSdkVersion 34
+        targetSdkVersion 35
         versionCode 1
         versionName '1.0'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -44,6 +50,7 @@ android {
         includeInApk true
         includeInBundle true
     }
+    buildToolsVersion '35.0.0'
 }
 
 dependencies {
@@ -71,8 +78,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database'
 
     // Facebook SDK (consistent version)
-    implementation 'com.facebook.android:facebook-login:18.0.3'
-    implementation 'com.facebook.android:facebook-share:18.0.3'
+    implementation 'com.facebook.android:facebook-login:18.1.3'
+    implementation 'com.facebook.android:facebook-share:18.1.3'
     implementation 'androidx.activity:activity:1.10.1'
 
     // Test
